--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="C:\Users\Lenovo\grey web developmet\download.jpg" alt="">
+                <img src="download.jpg" alt="">
                 </div>
 
 
