--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3 Direction</title>
-    <link rel="icon" href="C:\Users\Lenovo\Documents\3 direction logo.jpg">
+    <link rel="icon" href="3 direction logo.jpg">
 
      <!--font awesome cdn link-->
 
@@ -253,7 +253,7 @@
        <div class="box-container">
 
         <div class="box">
-            <img src="C:\Users\Lenovo\grey web developmet\icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
+            <img src="icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis consequatur quis ipsum qui voluptatum laudantium quaerat?</p>
             <img src="review images.png" class="user" alt=""  >
             <h3></h3>
@@ -268,7 +268,7 @@
             </div>
 
             <div class="box">
-                <img src="C:\Users\Lenovo\grey web developmet\icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
+                <img src="icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis consequatur quis ipsum qui voluptatum laudantium quaerat?</p>
                 <img src="review5.png" class="user" alt="">
                 <h3></h3>
@@ -283,7 +283,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="C:\Users\Lenovo\grey web developmet\icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
+                    <img src="icons8-double-quotes-48.png" alt="" width="50" height="50" class="quote">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis consequatur quis ipsum qui voluptatum laudantium quaerat?</p>
                     <img src="review2.png" class="user" alt="">
                     <h3></h3>
