--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3 Direction</title>
+    <title>GREY</title>
     <link rel="icon" href="3 direction logo.jpg">
 
      <!--font awesome cdn link-->
