--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
         <div class="box">
             <img src="grey5.png" alt="">
             <h3>tasty and healthy</h3>
-            <div class="price">SAR15.99<span>20.99></span></div>
+            <div class="price">SAR15.99<span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
     </div>
         
     <div class="box">
         <img src="grey6.png" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">SAR15.99<span>20.99></span></div>
+        <div class="price">SAR15.99<span>20.99</span></div>
         <a href="#" class="btn">add to cart</a>
 </div>
 
