--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <div class="box">
     <img src="grey3.png" alt="">
     <h3>tasty and healthy</h3>
-    <div class="price">SAR15.99<span>20.99></span></div>
+    <div class="price">SAR15.99<span>20.99</span></div>
     <a href="#" class="btn">add to cart</a>
 </div>
     </div>
