--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <div class="row">
 
-            <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1W-5Z4bdFIaqstUzcNUIGTqFJNr3tviM&ehbc=2E312F"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d253483.4299522212!2d39.2493586375586!3d21.652254566461096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zR1JFWSDZgtix2KfZiiAtIEdSRVk!5e0!3m2!1sen!2ssa!4v1710424339831!5m2!1sen!2ssa"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 
             </iframe>
         <form action="">
