--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
      <a href="https://www.instagram.com/grey.ksa/" class="fab fa-instagram"></a>
      <a href="#" class="fab fa-twitter"></a>
      <a href="#" class="fab fa-linkedin"></a>
-     <div class="credit">created and Copyright by  <span> ©three direction </span>  ALL Rights reserved</div>
+     <div class="credit">created and Copyright by  <span> ©Anas Jamal </span>  ALL Rights reserved</div>
 </div>
     
      <div class="links">
@@ -362,6 +362,7 @@
     
 
  
+
 
 
 
